CSS: Fix page overlap (empty stuff on right side)
Set html width, remove container-fluid padding

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,8 @@
 
 html {
   position: relative;
-  height: 100%; }
+  height: 100%;
+  width: 100%; }
 
 img {
   width: 100%; }
@@ -67,7 +68,10 @@ a, .btn {
 a:hover, a:focus, a:active {text-decoration: none;}
 
 body > .container-fluid {
-  padding: 60px 15px 0; }
+  padding: 60px 0; }
+
+.row {
+  margin:auto;}
 
 .container-fluid .text-muted {
   margin: 20px 0; }
